--- a/auth/pubspec.yaml
+++ b/auth/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.8
   email_validator: ^2.0.1
+  dash_chat: ^1.1.16
+  sendbird_sdk: ^3.2.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
