--- a/auth/pubspec.yaml
+++ b/auth/pubspec.yaml
@@ -68,7 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
 assets:
-  - build/app/images/mypicture.jpg
+  - assets/images/mypicture.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
