--- a/auth/pubspec.yaml
+++ b/auth/pubspec.yaml
@@ -41,7 +41,20 @@ dependencies:
   dash_chat: ^1.1.16
   sendbird_sdk: ^3.2.8
   grouped_list: ^5.1.2
-  intl: ^0.15.7
+  intl: ^0.17.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
+  cloud_firestore: ^4.5.0
+  google_sign_in: ^6.1.0
+  fluttertoast: ^8.2.1
+  image_picker: ^0.8.7+1
+  shared_preferences: ^2.1.0
+  firebase_storage: ^11.1.0
+  firebase_messaging: ^14.4.0
+  flutter_local_notifications: ^13.0.0
+  photo_view: ^0.14.0
+  provider: ^6.0.1
+
 
 dev_dependencies:
   flutter_test:
